--- a/src/views/styles.css
+++ b/src/views/styles.css
@@ -11,30 +11,78 @@
   --yellow: #fff565;
 }
 
+/* ========= Main Page ========= */
+
+/* Navigation */
+.navbar {
+  /* overflow: hidden; */
+  background-color: var(--bg-darker);
+
+  display: flex;
+  align-items: center;
+  justify-content: left;
+}
+
+.navbar a {
+  float: left;
+  color: var(--text);
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.navbar .active {
+  background-color: var(--purple);
+  color: var(--text);
+}
+/* ======== */
+
 body {
   background: var(--bg);
   transition: background 500ms ease-in-out, color 1000ms ease-in-out;
-}
 
-.first_paragraph {
   text-align: center;
   color: var(--text);
 }
 
-h1 {
-  text-align: center;
-  color: var(--text);
+.main_body {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  /* text-align: center;
+  color: var(--text); */
+}
+
+.header {
+  background-color: var(--bg-darker);
+  padding: 20px;
+  margin-top: 20px;
+}
+
+.main {
+  background-color: var(--bg-darker);
+  margin-top: 20px;
+  padding: 30px;
 }
 
 /* === theme switcher === */
 .light {
   --bg: var(--gray0);
+  --bg-darker: var(--gray2);
   --text: var(--gray6);
   --border-color: var(--blue);
 }
 
 .dark {
   --bg: var(--gray5);
+  --bg-darker: var(--gray6);
   --text: var(--gray0);
   --border-color: var(--purple);
 }
