--- a/src/views/css/nav_bar.css
+++ b/src/views/css/nav_bar.css
@@ -35,6 +35,7 @@
 }
 
 .navbar a:hover {
+  /* add exception to button*/
   background-color: var(--bg);
   color: black;
 }
@@ -42,6 +43,19 @@
 .navbar .active {
   background-color: var(--blue);
   color: var(--text);
+}
+
+/* === Change Theme Button ===*/
+
+/* Adding Svg to themeButton */
+.themeswitch_button {
+  width: 40px;
+  height: 40px;
+}
+
+.themeswitch_button svg {
+  width: 35px;
+  height: 35px;
 }
 
 /* === Theme Switcher === */
