User login and password data sent to DB collecion 'users'

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -12,7 +12,8 @@ Doctype
          .navbar
             a.active(href="/") Home 
             a(href="/reviews") Reviews
-            a(href="/query_db") QueryDB
+            a(href="/register") Register
+            a(href="/login") Login
             a 
                button(class="themeswitch_button" type="button" onclick="switchTheme()")
                   <svg version="1.1" id="Icons" class="themesvg"xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
