--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -1,7 +1,7 @@
 Doctype 
     html 
         head    
-            title Query MongoDB 
+            title Query MongoDB - Login 
             script
                 include changeTheme.js
             style 
@@ -12,7 +12,8 @@ Doctype
          .navbar
             a(href="/") Home 
             a(href="/reviews") Reviews
-            a.active(href="/query_db") QueryDB
+            a(href="/register") Register
+            a.active(href="/login") Login
             a 
                button(class="themeswitch_button" type="button" onclick="switchTheme()")
                   <svg version="1.1" id="Icons" class="themesvg"xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
@@ -23,3 +24,14 @@ Doctype
                   <line class="st0" x1="3" y1="16" x2="6" y2="16"/>
                   <line class="st0" x1="6.81" y1="25.19" x2="8.93" y2="23.07"/>
                   <path class="st0" d="M16,12.55C17.2,10.43,19.48,9,22.09,9c0.16,0,0.31,0.01,0.47,0.02c-1.67,0.88-2.8,2.63-2.8,4.64,c0,2.9,2.35,5.25,5.25,5.25c1.6,0,3.03-0.72,3.99-1.85C28.48,20.43,25.59,23,22.09,23c-2.61,0-4.89-1.43-6.09-3.55"/></svg> 
+        
+         .main
+            form(action="/login", method="POST") 
+                div 
+                    label(for="name") Username 
+                    input(type="text" id="username" name="username" required)
+                div 
+                    label(for="password") Password 
+                    input(type="password" id="password" name="password" required)
+                button(type="submit") Login
+            a(href="/register") Register
