--- a/src/views/register.pug
+++ b/src/views/register.pug
@@ -1,19 +1,18 @@
 Doctype 
-  html
-     head
-         title Reviews | Movie Reviews
-         script
-            include changeTheme.js
-         style 
-            include ./css/nav_bar.css
-            include ./css/styles_reviews.css 
-  
-     body(class="light")
+    html 
+        head    
+            title Query MongoDB 
+            script
+                include changeTheme.js
+            style 
+                include ./css/nav_bar.css
+
+    body(class="light")
          //- navigation
          .navbar
             a(href="/") Home 
-            a.active(href="/reviews") Reviews
-            a(href="/register") Register
+            a(href="/reviews") Reviews
+            a.active(href="/register") Register
             a(href="/login") Login
             a 
                button(class="themeswitch_button" type="button" onclick="switchTheme()")
@@ -24,10 +23,15 @@ Doctype
                   <line class="st0" x1="6.81" y1="6.81" x2="8.93" y2="8.93"/>
                   <line class="st0" x1="3" y1="16" x2="6" y2="16"/>
                   <line class="st0" x1="6.81" y1="25.19" x2="8.93" y2="23.07"/>
-                  <path class="st0" d="M16,12.55C17.2,10.43,19.48,9,22.09,9c0.16,0,0.31,0.01,0.47,0.02c-1.67,0.88-2.8,2.63-2.8,4.64,c0,2.9,2.35,5.25,5.25,5.25c1.6,0,3.03-0.72,3.99-1.85C28.48,20.43,25.59,23,22.09,23c-2.61,0-4.89-1.43-6.09-3.55"/></svg>
-            
-         .main 
-            .child1 
-            .child2 
-            .child3 
-            .child4 
+                  <path class="st0" d="M16,12.55C17.2,10.43,19.48,9,22.09,9c0.16,0,0.31,0.01,0.47,0.02c-1.67,0.88-2.8,2.63-2.8,4.64,c0,2.9,2.35,5.25,5.25,5.25c1.6,0,3.03-0.72,3.99-1.85C28.48,20.43,25.59,23,22.09,23c-2.61,0-4.89-1.43-6.09-3.55"/></svg> 
+        
+         .main
+            form(action="/register", method="POST") 
+                div 
+                    label(for="name") Username 
+                    input(type="text" id="username" name="username" required)
+                div 
+                    label(for="password") Password 
+                    input(type="password" id="password" name="password" required)
+                button(type="submit") Register
+            a(href="/login") Login
